--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -105,7 +105,7 @@ Concerning specifically the comments made by the first referee:
    % I believe it would be better to begin with an illustrative example on how two or three initial patterns influence the model results and then use the suggested method for a more extensive analysis
    \item We agree that illustrative examples would provide a relevant starting point to  the analysis but we were afraid that their addition to the paper would make the introduction less straightforward and have the opposite effect to the one we were seeking. As we were nevertheless very interested by your remark, we provide a short answer to your proposition.
    
-In order to get a first idea of the potential impact of spatial initial conditions on to the results of the simulation, we implemented on Segregation model a geographical constraint: some cells cannot be inhabited (yellow cells in Figure 1). The way those “forbidden” cells are distributed throughout space will indeed influence the steps of the model. 
+In order to get a first idea of the potential impact of spatial initial conditions on to the results of the simulation, we implemented on the Schelling Segregation model a geographical constraint: some cells cannot be inhabited (yellow cells in Figure 1). The way those “forbidden” cells are distributed throughout space will indeed influence the steps of the model. 
 We introduced various spatial initial conditions in the model that we controlled by one clustering parameter on the forbidden cells. A value of 0 would indicate a spatial distribution of yellow cells so as to minimize spatial autocorrelation. A value of 1 indicates on the contrary a concentration process that tends towards a high value of autocorrelation (see below Figure 1). % note : no fig envt in moderncv
 
 We then compute the number of communities arising when the model converge, hence the number of different related components of similar neighbors.
@@ -143,21 +143,20 @@ Fig. 1: \textbf{Effects of clustering of forbidden cells on the number of commun
 	\item Some general references on comparing patterns were added.
 	
 	% 7. Line 238: Please explain why this particular index was chosen and discuss its properties. Connect the discussion to other indices like L1, and Linf norms, etc. Would we get qualitatively different results from different indices? 
-	\item The approach proposed in the paper is indeed rather exploratory. This explains why we have chosen to focus on a single index (L2) as this index is relatively well-known in the community. Previous exploratory analyses have shown that the results were rather stable when using the Monge method. Adapting the mathematical aggregator to the different indices would constitute an interesting perspective, but is out of the scope of the paper which already focuses on two models and proposes a new framework for analysing the impact of initial pattern parameters. We added a supplementary material showing the distances obtained with other distances, which are similar to the results in main text.
+	\item The approach proposed in the paper is indeed rather exploratory. This explains why we have chosen to focus on a single index (L2) as this index is relatively well-known in the community. Previous exploratory analyses have shown that the results were rather stable when using the Monge method. Adapting the mathematical aggregator to the different indices would constitute an interesting perspective, but is out of the scope of the paper which already focuses on two models and proposes a new framework for analysing the impact of initial pattern parameters. We however added a supplementary material showing the distances obtained with other distances, which are similar to the results in main text.
 	
 	% 8. Regarding the spatial generator: the authors should explain why this generator is relevant to these two models? 
 	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit. 
 	
-	\item In the case of Schelling, this is the scale at which most empirical segregation indices are computed. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources (Batty, 2005), or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density, and that not acknowledging this diversity leads to potentially false results. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most common simplification of the heterogeneity of space, with consequences on the model outputs often not evaluated.
+	\item More particularly concerning the choice of this generator in the case of Schelling, this is the scale at which most empirical segregation indices are computed. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources (Batty, 2005), or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density, and that not acknowledging this diversity leads to potentially false results. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most common simplification of the heterogeneity of space, with consequences on the model outputs often not evaluated.
 	
 	% 9. The authors should illustrate the contribution of each parameter of the generator to the generated initial pattern using a figure. Details of the generators should be included in an appendix
 	\item The behavior of the spatial generator was described with more details in Appendix.
 	
 	% 10. Explain how the density grids are used in the Schelling model, do you allow more than one agent to be in the same cell? 
-	\item Yes, we allow more agents to be in the same cell. The potential density is defined by the density grid generated, and its population with the same number of agents in all grids. This distribution is the one at initialisation. If the potential density is not reached, more agents can move in the cell, otherwise it is deemed full and unavailable for further moves. The satisfaction and segregation indices are computed with regard to the people in the cell and the people present in neighbouring cells.
+	\item Regarding the use of the density grid in the Schelling model, yes we allow more agents to be in the same cell. The potential density is defined by the density grid generated, and its population with the same number of agents in all grids. This distribution is the one at initialisation. If the potential density is not reached, more agents can move in the cell, otherwise it is deemed full and unavailable for further moves. The satisfaction and segregation indices are computed with regard to the people in the cell and the people present in neighbouring cells.
 	
 	% 11. Line 297: I am not sure why empirical density destitutions of cities are important in the context of this study. 
-	%\item cf infra. 
 	\item Density distributions of empirical cities are important because we want to test models with realistic ranges of initial patterns of density distribution. Therefore we cannot limit ourselves to a single 2-peak mountain in the classical Sugarscape model and an isotropic square city in Schelling. We chose to use actual distribution of European cities to constraint our density generation.
 	
 	% 12. Line 641: NetLogo supports grids, continuous space, and GIS elements. It does not restrict the user in any way.
@@ -168,7 +167,6 @@ Fig. 1: \textbf{Effects of clustering of forbidden cells on the number of commun
 	
 	% 14. Line 671: The same comment regarding “mythical ABMs” 
 	\item The term ``mythical'' line 671 was a language mistake and corrected, ``textbook'' ABM was meant.
-    %\comment[MLT]{Use "textbook ABM instead?}[(JR) yes, better]
 \end{itemize}
 
 
@@ -194,7 +192,7 @@ Concerning the comments made by the second referee:
 	\item Concerning the remarks on synthetic population generation and the different types of models, we clearly stated our positioning regarding models built from theory, for which the proposed sensitivity analysis workflow is more suited and that our two case studies illustrate.
 	
 	% In section 1.3 (Previous considerations on the effects of the spatial configuration in simulation models) authors provide a lot of evidence on previous work on the impact of initial spatial conditions on the output of models. This is contrary to the statement in the abstract that initial conditions are often taken for granted.
-	\item Indeed, we have tried to review articles where some kind of sensitivity to initial spatial conditions are tackled. However we would like to emphasize that the references cited in this section are few compared to the mass of geosimulation articles published with hardly any mention of dependence of output on initial spatial condition. Moreover, even if such sensitivity is analysed, it mostly provide some hints of impact of initial spatial conditions on the output of models (due to the accuracy of data, shape of boundaries and spatial heterogeneity) but to the best of our knowledge no article provide a systematic inquiry into the impact of systematically defined spatial input on the model output in the way we try to provide later on in the paper. We have tried to argue this point at the end of the section.
+	\item Indeed, we have tried to review articles where some kind of sensitivity to initial spatial conditions are tackled. However we would like to emphasize that the references cited in this section are few compared to the mass of geosimulation articles published with hardly any mention of dependence of output on initial spatial condition. Moreover, even if such sensitivity is analysed, it mostly provide some hints of impact of initial spatial conditions on the output of models (due to the accuracy of data, shape of boundaries and spatial heterogeneity) but to the best of our knowledge no article provide a systematic inquiry into the impact of systematically defined spatial input on the model output in the way we try to provide later on in the paper. We have tried to argue this point at the end of the first section.
 	
 	% The most interesting part of the research to me, is not the way the density layers are generated but the use of the phase diagrams, defined as a vector of final aggregated model outputs. As these are vectors, they are not so different from time series and many techniques exist to compare vectors in this domain. I wonder if the Euclidean distance is the best measure to determine the difference between the phase vectors of different spatial inputs.
 	\item The comment on other possible techniques to compare phase diagrams echoes one other reviewer comment, and we indeed expanded the discussion on this point, showing first that other distances do not change much qualitative results (analysis added in supplementary material) and with more literature for possible extensions.
@@ -203,7 +201,7 @@ Concerning the comments made by the second referee:
 	\item The functionalities of OpenMOLE we used were detailed in the article; we did not use genetic algorithms but sampling methods and high performance computing environments.
 	
 	% In section 3.1, page 8, line 404-405 the authors mention that the distance of the phase diagrams was measured with respect to the reference phase diagram computed on the default initial spatial conditions. Actually this came as a surprise to me. I had the impression that all phase diagrams would be evaluated against all other diagrams. Perhaps this should be explained earlier in the paper.
-	\item Concerning the measure of the distance of all phase diagram to one reference phase diagram, this choice was made as we preferred having a local sensitivity index for which the distribution can be studied, rather than a global completely integrated sensitivity index (similar to Saltelli or Morris indexes for example). This was explained better in the paper.
+	\item Concerning the measure of the distance of all phase diagram to one reference phase diagram, this choice was made as we preferred having a local sensitivity index for which the distribution can be studied, rather than a global completely integrated sensitivity index (similar to Saltelli or Morris indexes for example). This was better explained in the paper.
  
 	
 	% Figure 4 and 5: I find it confusing that the green color indicates higher distance values and the red color indicates lower values. I think this should be reversed.
@@ -241,7 +239,7 @@ Concerning the comments made by the third referee:
 	\item We do not have knowledge of examples in which the comparison of patterns or fields is called ``phase diagram comparison'', and we neither have knowledge of such work in physics for example, from which the term originated. There is naturally all the literature we cited on similar issues in other domains, and the extension of the discussion gives elements of answer to this point.
 	
 	% In the Schelling and sugarscape models how are the initial population of agents distributed? Is it random? I ask as this is unclear in the current version of the paper but it is vital if your purpose is to explore how the initial spatial configuration impacts the results of the model. Should the agents not be all located at the same location for each run to rule out the impact of initial placement of agents on the resulting patterns? This is something that is not addressed in the paper. I know for example, the Schelling model in NetLogo normally places the agents at random locations but in your reimplementation how is this done? The same goes for the sugarscape model in NetLogo. I believe a clearer description of the model initialization would be good and how its not the initial random placement of agents but the actual environment that impacts the outcomes. Maybe this was explained in the paper but I missed it.  
-	\item Yes, classically, the initial distribution of agents is random in both models and, most importantly for our point, it follows a uniform distribution of density. In our implementation, the initial location of agents is also random in Schelling, but it follows a distribution of density given by the generated grid. In Sugarscape, the agents are initialised at random but the resources follow a distribution of density given by the generated grid. We have clarified this point in section 2.3
+	\item Regarding the way these models are used in the literature, yes, the initial distribution of agents is classically random in both models and, most importantly for our point, it follows a uniform distribution of density. In our implementation, the initial location of agents is also random in Schelling, but it follows a distribution of density given by the generated grid. In Sugarscape, the agents are initialised at random but the resources follow a distribution of density given by the generated grid. We have clarified this point in section 2.3.
            
 	% In Section 1.2 talk about “(monocentric vs. polycentric for example)” but in the results you don’t discuss the monocentric versions explicitly using these terms.
 	\item We believe that the monocentric versions are explicitly analysed in table 1: the term "monocentric" itself does not appear in the regression results but it is only because it is taken as the reference case under the term "compact' in the regression. We have clarified this in section 3.2.
@@ -259,7 +257,7 @@ Concerning the comments made by the fourth referee:
 
 \begin{itemize}
 	% In sensitivity analysis of spatial models, stochastic effects and small parameter changes are normally applied. What about initial conditions? The authors test the effects of different arrangements (e.g. monocentric vs. polycentric density patterns) on agent-based Schelling segregation models and Sugarscape's unequal societies model. Overall, I find this to be a very good paper. Very well written in general. Good review of the problem, clearly outlining (with references) the need for focus on initial conditions in geosimulation. The chief factors (data uncertainty, nature of spatial units (e.g. shape) and spatial heterogeneity) on initial spatial conditions are covered: -how many of these do you test? I see heterogeneity addressed, but what about shape and uncertainty? You touch upon shape when talking about NetLogo's use of raster as opposed to vector in the Discussion - could you expand on this?
-	\item We thank the reviewer for this good remark. We provide references to papers addressing these issues. However, we have not addressed the shape of cells and the uncertainty of data in this paper, only the diversity of shapes of urban morphologies (e.g. heterogeneity). 
+	\item We thank the reviewer for this good remark regarding connected issues such as heterogeneity or the choice raster/vector. We provide references to papers addressing these issues. However, we have not addressed the shape of cells and the uncertainty of data in this paper, only the diversity of shapes of urban morphologies (e.g. heterogeneity). 
 	
 	% Rigorous experimental method described. In the matching of European metropolitan areas to your generated outputs, I wonder what you are missing by not using cities from other continents. i.e. by widening the cities available to your study it may be possible to even better discover real-world examples of your archtypes (compact, polycentric, discontinuous).
 	\item To the best of our knowledge, there is no study of urban morphologies similar to the one we used but at a global scale (this should be linked to the absence of a raster of population with a resolution fine enough). Working on other regional systems of cities such as the US could be possible but remains out of the scope of this paper. We added this interesting suggestion to the discussion.
