--- a/spacematters.bib
+++ b/spacematters.bib
@@ -1,4 +1,11 @@
 
+@article{raimbault2018unveiling,
+  title={Unveiling co-evolutionary patterns in systems of cities: a systematic exploration of the SimpopNet model},
+  author={Raimbault, Juste},
+  journal={arXiv preprint arXiv:1809.00861},
+  year={2018}
+}
+
 @incollection{hastie2009unsupervised,
   title={Unsupervised learning},
   author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
