--- a/paper.tex
+++ b/paper.tex
@@ -82,7 +82,7 @@
 
 
 \begin{abstract}
-Although simulation models of geographical systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain unless their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually \replaced{not modified systematically}{taken for granted} in geographical models, thus leaving \deleted{completely} unexplored the effect of \added{initial} spatial arrangements on the interactions of agents \replaced{with one another as well as}{and of that of agents} with their environment. In this paper, we present a method to assess the effect of some initial spatial conditions on simulation models, using a systematic \added{spatial configuration} generator \deleted{controlled by meta-parameters} in order to create density grids with which spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of unequal societies) and a straightforward open-source work-flow using high performance computing, that the effect of initial spatial arrangements is significant \replaced{on}{in} the two models. Furthermore, this effect is sometimes larger than the effect of parameters' value change. 
+Although simulation models of geographical systems in general and agent-based models in particular represent a fantastic opportunity to explore socio-spatial behaviours and to test a variety of scenarios for public policy, the validity of generative models is uncertain unless their results are proven robust and representative of 'real-world' conditions. Sensitivity analysis usually includes the analysis of the effect of stochasticity on the variability of results, as well as the effects of small parameter changes. However, initial spatial conditions are usually not modified systematically in geographical models, thus leaving unexplored the effect of initial spatial arrangements on the interactions of agents with one another as well as with their environment. In this paper, we present a method to assess the effect of some initial spatial conditions on simulation models, using a systematic spatial configuration generator in order to create density grids with which spatial simulation models are initialised. We show, with the example of two classical agent-based models (Schelling's models of segregation and Sugarscape's model of unequal societies) and a straightforward open-source work-flow using high performance computing, that the effect of initial spatial arrangements is significant on the two models. Furthermore, this effect is sometimes larger than the effect of parameters' value change.
 \end{abstract}
 
 \begin{keyword}
