--- a/spacematters.bib
+++ b/spacematters.bib
@@ -55,7 +55,7 @@
 
 
 @article{liao2005clustering,
-  title={Clustering of time series data—a survey},
+  title={Clustering of time series data - a survey},
   author={Liao, T Warren},
   journal={Pattern recognition},
   volume={38},
@@ -483,7 +483,7 @@
 }
 
 @article{Singhetal2009,
-  title={Schelling’s Segregation Model: Parameters, scaling, and aggregation},
+  title={Schelling's Segregation Model: Parameters, scaling, and aggregation},
   author={Singh, Abhinav and Vainchtein, Dmitri and Weiss, Howard},
   journal={Demographic Research},
   volume={21},
