--- a/coverletter.tex
+++ b/coverletter.tex
@@ -24,8 +24,8 @@
 
 
 % recipient data
-\recipient{Editors CEUS}{}
-\date{June 13, 2018}
+\recipient{Editors JASSS}{}
+\date{December 13, 2018}
 \opening{Dear Editors,}
 \closing{Yours faithfully,\\
 Juste Raimbault and co-authors\\
@@ -35,50 +35,51 @@ UPS CNRS 3611 ISC-PIF
 \makelettertitle
 
 
-
+% the authors' postal and email addresses and the authors' home pages on the web
 
 % authors bio
 % Juste Raimbault is a PhD student at Université Paris 7, UMR CNRS 8504 Géographie-cités and UMR-T 9403 IFSTTAR LVMT, under the supervision of Arnaud Banos and Florent Le Néchet. He holds an engineer degree from Ecole Polytechnique and Ecole des Ponts et Chaussées, and a Master in Complex Systems Science from Ecole Polytechnique. His research focuses on complexity approaches to the relations between networks and territories.
+% UPS CNRS 3611 ISC-PIF, 113 rue Nationale 75013 Paris
+% juste.raimbault@polytechnique.edu
+% http://parisgeo.cnrs.fr/spip.php?article6835&lang=en
+
 
 % Dr. Clémentine Cottineau is a research associate at the Centre for Advanced Spatial Analysis of University College London. She studied geography and economics at University Paris 1 Panthéon-Sorbonne and holds a PhD in geography from this university. Her thesis aimed at modelling urbanisation in the post-Soviet space with modular agent-based models. Since 2014, she has been working at the Centre for Advanced Spatial Analysis on urban economics and parametric scaling in the context of European systems of cities, using tools from complexity science to investigate inequality in cities and economic disparities between cities.
+% UMR CNRS 8097 Centre Maurice Halbwachs, 48 boulevard Jourdan 75014 Paris
+% clementine.cottineau@ens.fr
+% http://clementinecttn.github.io/
 
 % Dr. Marion Le Texier is associate professor at University of Rouen Normandie. She holds a PhD in geography from both Paris Diderot University and Luxembourg University. Her thesis aimed at modelling the circulation of euro coins through European borders with statistical and agent-based models. Previous to joining Rouen Normandie University in 2016, she has been a Jean Monet fellow at the European University Institute in Florence and a post-doc at Luxembourg University. Her work deals with data and modelling issues in different thematic contexts: access to nature in cities, international online media coverage of earthquakes, to name but two.
+% UMR 6266 IDEES, Universit{\'e} de Rouen Normandie, France
+% marion.le-texier@univ-rouen.fr
+% http://umr-idees.fr/user/marion-le-texier/
 
 % Dr. Florent Le Néchet is associate professor at  Paris-Est Marne-la-Vallée University (UPEM). He holds a PhD in planning from Paris-Est University (UPE). His thesis aimed at modelling the relationships between urban form and mobility patterns at metropolitan level, comparing several European cities, especially in France and Germany. His work deals with charactering and measuring mobility in cities, in relation to the built environment, and involves statistical techniques as well as multi-agent modelling.
+% Universit{\'e} Paris-Est, Laboratoire Ville Mobilit{\'e} Transport, Marne-la-Vallée, France
+% Florent.Lenechet@u-pem.fr 
+% http://www.lvmt.fr/equipe/florent-le-nechet/
+
 
 
 % Dr. Romain Reuillon is a research fellow at UMR CNRS 8504 Géographie-cités and at the Complex System Institute Paris Ile-de-France. He holds a PhD in Computer Science from Université Clermont II. His work deals with intensive computation model exploration, focusing on new techniques and methods to extract knowledge from models of simulation. He is the creator of the OpenMole platform for model exploration.
-
-
-% Cover Letter
-
-% Dear editors,
-
-%My coauthors and I are pleased to submit an original research article entitled ``Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models'' for consideration for publication in Computer, Environment and Urban Systems.
-
-%This article deals with the central yet poorly explored issue of the sensitivity of geosimulation models to their spatial context (i.e. the spatial configuration of agents and their environment), and more precisely their spatial initial conditions. We think the subject in general and the novelty of the paper in particular will meet the interest of the readers of CEUS, a journal dealing with computerised models and urban systems.
-
-%Despite some preliminary results being presented as at ECTQG 2015, Bari, and at Geocomputation Conference 2017, Leeds, we confirm that neither the manuscript nor any parts of its content are currently under consideration or published in another journal. We did not have any previous interaction with CEUS regarding this manuscript. We have no conflicts of interest to disclose. We do not have any opposed reviewer.
-
-% Yours faithfully,
-% Juste Raimbault and co-authors.
-
-
-
-
-
+% UPS CNRS 3611 ISC-PIF, 113 rue Nationale 75013 Paris
+% romain.reuillon@iscpif.fr
+% 
 
 
 
 
 
 \justify
-My coauthors and I are pleased to submit an original research article entitled ``Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models'' for consideration for publication in Computer, Environment and Urban Systems.
+My coauthors and I are pleased to submit an original research article entitled ``Space Matters: extending sensitivity analysis to initial spatial conditions in geosimulation models'' for consideration for publication in the Journal of Artificial Societies and Social Simulation.
 
-This article deals with the central yet poorly explored issue of the sensitivity of geosimulation models to their spatial context (i.e. the spatial configuration of agents and their environment), and more precisely their spatial initial conditions. We think the subject in general and the novelty of the paper in particular will meet the interest of the readers of CEUS, a journal dealing with computerised models and urban systems.
+This article deals with the central yet poorly explored issue of the sensitivity of geosimulation models to their spatial context (i.e. the spatial configuration of agents and their environment), and more precisely their spatial initial conditions. We think the subject in general and the novelty of the paper in particular will meet the interest of the readers of JASSS, a journal dealing with computerised models and social systems.
 
-Despite some preliminary results being presented as at ECTQG 2015, Bari, and at Geocomputation Conference 2017, Leeds, we confirm that neither the manuscript nor any parts of its content are currently under consideration or published in another journal. We did not have any previous interaction with CEUS regarding this manuscript. We have no conflicts of interest to disclose. We do not have any opposed reviewer.
-\justify
+Despite some preliminary results being presented as at ECTQG 2015, Bari, and at Geocomputation Conference 2017, Leeds, we confirm that neither the manuscript nor any parts of its content are currently under consideration or published in another journal. We did not have any previous interaction with JASSS regarding this manuscript. We have no conflicts of interest to disclose.
+
+%We do not have any opposed reviewer.
+%We would like to oppose the following reviewer: Pr. I. Benenson, University of Tel-Aviv. As an potential editor for a previous version of this manuscript which was finally rejected from the journal Computer, Environments and Urban Systems, he tried to make us change the purpose and message of the paper, wanting us to rewrite the paper as a targeted study of the Schelling model, ignoring the majority of reviewers comments and getting out of his role as an editor. This non objective relation between him and us had already began in 2015 at ECTQG when it was presented. For this reason, we do not think to would be scientific nor productive that he would be a reviewer of this paper.
+
 
 
 
