Update on Overleaf.

--- a/coverletter.tex
+++ b/coverletter.tex
@@ -38,7 +38,7 @@ UPS CNRS 3611 ISC-PIF
 % the authors' postal and email addresses and the authors' home pages on the web
 
 % authors bio
-% Juste Raimbault is a PhD student at Université Paris 7, UMR CNRS 8504 Géographie-cités and UMR-T 9403 IFSTTAR LVMT, under the supervision of Arnaud Banos and Florent Le Néchet. He holds an engineer degree from Ecole Polytechnique and Ecole des Ponts et Chaussées, and a Master in Complex Systems Science from Ecole Polytechnique. His research focuses on complexity approaches to the relations between networks and territories.
+% Juste Raimbault is a postdoctoral researcher at ISC-PIF. He holds an engineer degree from Ecole Polytechnique and Ecole des Ponts et Chaussées, and a Master in Complex Systems Science from Ecole Polytechnique. His research focuses on complexity approaches to the relations between networks and territories.
 % UPS CNRS 3611 ISC-PIF, 113 rue Nationale 75013 Paris
 % juste.raimbault@polytechnique.edu
 % http://parisgeo.cnrs.fr/spip.php?article6835&lang=en
